--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@rainbow-me/rainbowkit": "^0.7.4",
+    "@tanstack/react-query": "^4.14.3",
+    "axios": "^1.1.3",
+    "ethers": "^5.7.2",
+    "framer-motion": "^7.6.4",
+    "mysql2": "^2.3.3",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.7.12"
   },
   "devDependencies": {
     "eslint": "8.26.0",
