--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "@tanstack/react-query": "^4.14.3",
+    "@xmtp/xmtp-js": "^7.0.1",
     "axios": "^1.1.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.4",
@@ -22,6 +26,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-social-login-buttons": "^3.6.1",
     "wagmi": "^0.7.12"
   },
   "devDependencies": {
