--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.4",
+    "js-confetti": "^0.11.0",
     "mysql2": "^2.3.3",
     "next": "13.0.2",
     "react": "18.2.0",
